Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.18, 6.5.7, 6.8.1
-
Windows 10 22H2, MSVC 2022 x64
-
33c13102b (dev)
Description
Code
import QtQuick.Controls.Basic ApplicationWindow { id: root width: 640 height: 480 visible: true property int intVal: swt.checked ? 100 : 100 property var varVal: swt.checked ? 100 : 100 onIntValChanged: console.log("intValChanged:", root.intVal) onVarValChanged: console.log("varValChanged:", root.varVal) Switch { id: swt } }
Steps to reproduce
- Run the code above
- Toggle the switch multiple times
Outcomes
Each time the switch is toggled...
- ...we see "varValChanged: 100" (Not Expected)
- ...we don't see "intValChanged" (Expected)
Attachments
Issue Links
- relates to
-
QTBUG-131905 Don't emit valueChanged signal at the initial binding evaluation
- Reported
For Gerrit Dashboard: QTBUG-131901 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
612358,4 | QtQml: Compare before assigning to var properties | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |